# oncodriver

./: .gitignore  .gitlab-ci.yml  CHANGELOG  README.md  complex_heatmap_SNV_oncoprint_v1.R  environment.yml  oncoDriver.py  pyproject.toml  snpeff_update.sh
archive/: snpeff_update.R
assets/: cancerGeneList.tsv
config/: pathogenic_variants.yml
src/: annot.py  cnv_process.py  snv_process.py  utils.py
src/oncodriver/: __init__.py  __main__.py  annot.py  cli.py  cnv_process.py  snv_process.py  utils.py
tests/: conftest.py  test_annot.py  test_cli.py  test_cnv_process.py  test_snv_process.py  test_utils.py
